tbg-nodes/deployments_kustomize/local/step_2/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kustomize-managed
  name: tbg-nodes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  rules:
    - host: "tbg-nodes.localhost"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: tbg-nodes-service
              servicePort: default
